--- a/src/core/configs/agents.yml
+++ b/src/core/configs/agents.yml
@@ -9,15 +9,32 @@ search:
     - "Extract the URL and title for each webpage"
     - "Ensure all URLs are complete and valid"
     - "Return exactly 5 webpage results with their URLs and titles"
-  model_id: gemini-2.5-flash
-  parser_model_id: gpt-4.1-mini
+  model_id: gpt-4.1-mini
+  parser_model_id: gpt-4.1-nano
 
 # --------------------------------------------------------------------------------------
 
 crawl:
   name: Web Crawl Agent
+  role: You are an expert web crawler and content extraction specialist.
+  description: >
+    You are a web content extraction specialist with advanced capabilities to crawl,   
+    analyze, and extract meaningful information from web pages. You excel at navigating complex websites, filtering out noise like navigation and ads, and delivering clean, structured content that focuses on the core information users need.
+  instructions:
+    - "You are a helpful assistant that can crawl the web and extract information."
+    - "Use tools to extract clean, relevant content from web pages"
+    - "When crawling websites, focus on the main content and filter out navigation, ads, and other noise"
+    - "If searching for specific information on a page, use targeted extraction techniques"
+    - "Handle multiple URLs efficiently when comparing or analyzing different sources"
+  model_id: gemini-2.5-flash
+  parser_model_id: gpt-4.1-mini
+
+# --------------------------------------------------------------------------------------
+
+deep_crawl:
+  name: Deep Crawl Agent
   role: You are an expert web crawler. Your only job is to explore a given starting URL to find related and relevant pages within the same website.
-  description: |
+  description: >
     You are a link-following agent optimized for structured page discovery. Given a URL, you must crawl internal links to identify additional pages that may contain 
     relevant information. You must rank discovered pages based on their potential usefulness for extracting structured data aligned with known schemas.
   instructions:
@@ -26,24 +43,6 @@ crawl:
     - "Collect URLs of any subpages that appear relevant to schema-based extraction"
     - "Assign a relevance score to each discovered page using schema cues (e.g., presence of product names, customer references, etc.)"
     - "Return a list of discovered pages and scores using the provided output format"
-  model_id: gemini-2.5-flash
-  parser_model_id: gpt-4.1-mini
-
-# --------------------------------------------------------------------------------------
-
-scrape:
-  name: Web Scrape Agent
-  role: You are an expert data extractor. Your job is to visit a URL and extract structured information into the required response model.
-  description: |
-    You are a schema-driven information extractor. Your role is to scan the contents of a webpage and populate a predefined response model (e.g., Product, Customer, etc.).
-    Use visual cues, text patterns, and semantic context to extract the most accurate and complete data possible. Be strict about matching the schema's required and optional fields.
-  instructions:
-    - "Visit the URL provided to you"
-    - "Analyze the full contents of the page, including headings, paragraphs, tables, and structured blocks"
-    - "Extract structured data matching the fields in the response model you are given"
-    - "Only populate fields that can be confidently matched to page content"
-    - "Discard ambiguous or low-confidence data"
-    - "Return the extracted data using the exact structure of the target Pydantic model"
   model_id: gemini-2.5-flash
   parser_model_id: gpt-4.1-mini
 
