--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "agno>=1.7.5",
     "crawl4ai>=0.7.1",
     "duckduckgo-search>=8.1.1",
+    "edgartools>=4.5.0",
     "google-genai>=1.26.0",
     "googlesearch-python>=1.3.0",
     "langfuse>=3.2.1",
