--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "agno>=1.7.5",
+    "agno==1.7.6",
     "crawl4ai>=0.7.1",
     "duckduckgo-search>=8.1.1",
     "edgartools>=4.5.0",
@@ -14,6 +14,7 @@ dependencies = [
     "langfuse>=3.2.1",
     "openai>=1.97.0",
     "pycountry>=24.6.1",
+    "pydantic>=2.11.7",
     "python-arango>=8.2.1",
     "sqlalchemy>=2.0.42",
     "tavily-python>=0.7.10",
